--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-title: My website
-subtitle: This is where I will tell my friends way too much about me
+title: Data Science and Statistics Portfolio
+subtitle: Website to Showcase Data Science and Statistics Projects
 use-site-title: true
 ---
 
